[aws-lambda-kotlin-base] Migrate to AbstractClientBuildService
Standard Kotlin variant. Locally green.