@@ -3,7 +3,7 @@ import org.jetbrains.dokka.gradle.DokkaExtension
 plugins {
     id("com.kelvsyc.internal.dokka")
     id("com.kelvsyc.internal.jacoco")
-    id("com.kelvsyc.internal.kotlin-plugin")
+    id("com.kelvsyc.internal.kotlin-gradle-library")
     id("com.kelvsyc.internal.github-publishing")
 }
 
@@ -11,21 +11,17 @@ configure<DokkaExtension> {
     moduleName.set("Lambda Kotlin Base")
 }
 
-gradlePlugin {
-    plugins.register("aws-lambda-kotlin-base") {
-        id = "com.kelvsyc.gradle.aws-lambda-kotlin-base"
-        implementationClass = "com.kelvsyc.gradle.plugins.LambdaKotlinBasePlugin"
-    }
-}
-
 dependencies {
-    api("com.kelvsyc.gradle:aws-kotlin-extensions")
     api("com.kelvsyc.gradle:clients-base")
 
     api(libs.aws.lambda.kotlin)
-    implementation(libs.aws.smithy.client)
-    implementation(libs.aws.smithy.credentials)
+    api(libs.aws.smithy.credentials)
     implementation(libs.kotlinx.coroutines.core)
 
     testImplementation(libs.mockk)
+}
+
+tasks.test {
+    // FIXME https://github.com/gradle/gradle/issues/18647
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
